Fixes appearance of bottom border of inactive tabs
file-icons vertical-align: middle caused background of tab to overflow
the bottom border.
vertical-align: top works around that albeit the icons don't line up
with the tab title as nicely.

--- a/styles/items.less
+++ b/styles/items.less
@@ -4,7 +4,7 @@
 
 @{pane-tab-selector}:before {
   margin-right: 5px;
-  vertical-align: middle;
+  vertical-align: top;
   //for better visualization in mac os
   -webkit-font-smoothing: antialiased;
 }
